--- a/src/components/actorprofile/ActorProfile.scss
+++ b/src/components/actorprofile/ActorProfile.scss
@@ -1,12 +1,12 @@
 .container-profile{
     display: flex;
-    flex: 1;
     flex-direction: column;
-    align-items: flex-start;
+    justify-content: flex-start;
+    align-items: center;
+    width: 20%;
+    gap: 10px;
 
     .span-item {
-        display: flex;
-        flex-grow: 3;
         font-weight: bold;
       }
     
