--- a/src/pages/landingpage/LandingPage.scss
+++ b/src/pages/landingpage/LandingPage.scss
@@ -2,11 +2,12 @@
 .container-landing{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    padding-left: 10px;
     .container-button{
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        width: 15%;
+        margin-left: 34px;
+        margin-top: 34px;
+        margin-bottom: 34px;
     }
 
     .container-pages{
@@ -17,3 +18,5 @@
     }
 
 }
+
+
