--- a/src/components/actorprofile/ActorProfile.scss
+++ b/src/components/actorprofile/ActorProfile.scss
@@ -5,6 +5,7 @@
     align-items: center;
     width: 20%;
     gap: 10px;
+    border-right: 1px solid #808B96 ;
 
     .span-item {
         font-weight: bold;
