--- a/src/components/actormovies/ActorMovies.scss
+++ b/src/components/actormovies/ActorMovies.scss
@@ -49,10 +49,19 @@
     //     justify-content: flex-start;
 
     // }
-    // .text-icon{
-    //     display: flex;
-    //     flex-direction: row;
-    //     justify-content: flex-end;
+    .text-icon{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
 
-    // }
+    }
+}
+
+
+.ant-list-pagination{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 20px;
 }
