--- a/src/pages/landingpage/LandingPage.scss
+++ b/src/pages/landingpage/LandingPage.scss
@@ -4,10 +4,12 @@
     flex-direction: column;
     align-items: flex-start;
     padding-left: 10px;
+    
     .container-button{
         margin-left: 34px;
         margin-top: 34px;
         margin-bottom: 34px;
+        
     }
 
     .container-pages{
@@ -15,6 +17,7 @@
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
+        border-top: 1px solid #808B96;
     }
 
 }
