--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,7 +1,9 @@
 .container-home{ 
-margin-top: 237px;
-width: fit-content;
-margin-left: 367px;
+display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 
 
 }
