--- a/src/components/actormovies/ActorMovies.scss
+++ b/src/components/actormovies/ActorMovies.scss
@@ -5,6 +5,7 @@
     
     .ant-list-item-main{
         flex-direction: column;
+        margin: 10px;
 
         .timestamps{
             display: flex;
