--- a/src/components/actorprofile/ActorProfile.scss
+++ b/src/components/actorprofile/ActorProfile.scss
@@ -6,6 +6,7 @@
     width: 20%;
     gap: 10px;
     border-right: 1px solid #808B96 ;
+    padding-top: 30px;
 
     .span-item {
         font-weight: bold;
