--- a/src/components/actorprofile/ActorProfile.scss
+++ b/src/components/actorprofile/ActorProfile.scss
@@ -1,16 +1,14 @@
-.container-profile{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 20%;
-    gap: 10px;
-    border-right: 1px solid #808B96 ;
-    padding-top: 30px;
+.container-profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 20%;
+  gap: 10px;
+  border-right: 1px solid #808b96;
+  padding-top: 30px;
 
-    .span-item {
-        font-weight: bold;
-      }
-    
+  .span-item {
+    font-weight: bold;
+  }
 }
-
